--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,11 @@ http {
       #server app_api_curso:8080;
    }
 
+  upstream apiPersona{
+      server api_persona:8080;
+      #server app_api_persona:8080;
+   }
+
    upstream apiEncuesta{
       server api_encuesta:8080;
       #server app_api_encuesta:8080;
@@ -81,6 +86,34 @@ http {
 
     }
 
+    location ~* /api/persona/* {
+
+         # Allow CORS on preflight request
+         if ($request_method = OPTIONS) {
+            add_header 'Content-Length' 0;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Access-Control-Allow-Origin' "*";
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
+            return 200;
+         }
+
+         set $cors 'on';
+
+         # Proxy pass to upstream
+         proxy_pass         http://apipersona;
+         proxy_redirect     off;
+         proxy_set_header   Host $host;
+         proxy_set_header   X-Real-IP $remote_addr;
+         proxy_set_header   X-Forwarded-For $remote_addr;
+
+         # Allow CORS on other requests after returning from the upstreams
+         if ($cors = 'on') {
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
+         }
+
+    }
 
 
     location ~* /api/encuesta/* {
